# InfiniPaper

./: .gitignore  .gitmodules  Dockerfile.backend  Dockerfile.frontend  Dockerfile.grobid  Makefile  README.md  TODO.md  docker-compose.yml
backend/: .env.example  .env.postgres.example  .env.sqlite.example  README.md  alembic.ini  ideas_db.json  pyproject.toml  requirements.txt
backend/app/: main.py  models.py  schemas.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: annotations.py  dedupe.py  external.py  folder.py  folders.py  gemini.py  ideas.py  llm.py  mineru.py  notes.py  papers.py  papers.py.bak  quality.py  richnotes.py  search.py  tags.py
backend/app/cli/: export_data.py
backend/app/core/: config.py  tasks.py
backend/app/db/: database.py
backend/app/db/migrations/: README  env.py  script.py.mako
backend/app/services/: doi_resolver.py  embedding.py  external_enrich.py  mineru_client.py  pdf_parser.py  recommender.py
backend/scripts/: migrate_folders.py
backend/storage/annotations/: 23.json
frontend/: README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/components/: AbstractNodePanel.tsx  AuthorFilterDropdown.tsx  DecorBG.tsx  DetailDialog.tsx  DirectorySidebar.tsx  EmbedCcfddl.tsx  GraphView.tsx  Layout.tsx  MagneticButton.tsx  NoteEditor.tsx  PaperCard.tsx  PaperDetail.tsx  PaperGraphDialog.tsx  Particles.tsx  PdfPane.tsx  QuickLinksDock.tsx  QuickTagPanel.tsx  RecentPapers.tsx  Skeleton.tsx  StatsCards.tsx  TagSelector.tsx  ThemeProvider.tsx  TiltCard.tsx  TopNav.tsx  UploadDropzone.tsx
frontend/lib/: apiBase.tsx  fonts.ts  imageStore.ts  richNoteApi.ts
frontend/pages/: _app.tsx  cards.tsx  ccf.tsx  ideas.tsx  import.tsx  (+5 more)
scripts/: bootstrap_db.py  export.sh  export_json.py  import.sh  run_backend.sh  run_frontend.sh  setup_linux.sh  setup_macos.sh
(+312 files in other folders)
