[tool.poetry]
name = "infinipaper-backend"
version = "0.1.0"
description = "InfiniPaper backend (FastAPI + SQLModel + Postgres + pgvector)"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlmodel = "^0.0.18"
SQLAlchemy = "^2.0.30"
pgvector = "^0.2.5"
pydantic = "^2.7.0"
loguru = "^0.7.2"
httpx = "^0.27.0"
rapidfuzz = "^3.9.0"
sentence-transformers = "^3.0.0"
PyPDF2 = "^3.0.1"
python-multipart = "^0.0.9"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.5.7"
black = "^24.8.0"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
